--- a/index.html
+++ b/index.html
@@ -97,49 +97,56 @@
             egg.
           </p>
         </header>
-        <div class="eggs">
+        <section class="eggs">
+          <!-- boiled -->
           <div class="eggs_cooked">
             <div class="eggs_cooked__btn" id="eggs_boiled">
               <p class="eggs_boiled__text">boiled</p>
             </div>
             <p class="egss_cooked__time">3min</p>
           </div>
+          <!-- soft-boiled -->
           <div class="eggs_cooked">
             <div class="eggs_cooked__btn" id="eggs_soft">
               <p class="eggs_soft__text">soft-boiled</p>
             </div>
             <p class="egss_cooked__time">6min</p>
           </div>
+          <!-- medium-boiled -->
           <div class="eggs_cooked">
             <div class="eggs_cooked__btn" id="eggs_medium">
               <p class="eggs_medium__text">medium-boiled</p>
             </div>
             <p class="egss_cooked__time">8min</p>
           </div>
+          <!-- hard-boiled -->
           <div class="eggs_cooked">
             <div class="eggs_cooked__btn" id="eggs_hard">
               <p class="eggs_hard__text">hard-boiled</p>
             </div>
             <p class="egss_cooked__time">11min</p>
           </div>
-        </div>
-        <div class="timer" id="countdown">
-          <p>00 : 00</p>
-        </div>
-        <div class="btn_cook">
-          <div class="btn_cook__start" id="start">
-            <p>start</p>
+        </section>
+        <!-- Timer -->
+        <section>
+          <div class="timer" id="countdown">
+            <p>00 : 00</p>
           </div>
-          <div class="btn_cook__stop" id="stop">
-            <p>stop</p>
+          <div class="btn_cook">
+            <div class="btn_cook__start" id="start">
+              <p>start</p>
+            </div>
+            <div class="btn_cook__stop" id="stop">
+              <p>stop</p>
+            </div>
           </div>
-        </div>
-        <audio
-          id="player"
-          src="/assets/mixkit-tick-tock-clock-timer-1045.wav"
-          type="audio/mp3"
-          loop
-        ></audio>
+          <audio
+            id="player"
+            src="/assets/mixkit-tick-tock-clock-timer-1045.wav"
+            type="audio/mp3"
+            loop
+          ></audio>
+        </section>
         <div class="btn_reset" id="reset">
           <p>reset</p>
         </div>
